Updated NGINX conf

--- a/nginx.sample.conf
+++ b/nginx.sample.conf
@@ -10,7 +10,7 @@ server {
 
     server_name sicc.example.com;
 
-    root REPLACE_ME/public;
+    root REPLACE_ME/src;
     index index.php index.html;
 
     access_log REPLACE_ME/access.log;
